# school-management-system-nextjs-django-postgres

./: DESIGN.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  populate_test_data.py  pyproject.toml  requirements.txt  schema_models.py  setup_dev.py
backend/academics/: apps.py  models.py
backend/academics/api/: serializers.py  urls.py  views.py
backend/academics/repositories/: assessment_repository.py  assignment_repository.py  class_repository.py  session_repository.py  subject_repository.py
backend/academics/selectors/: assignment_selector.py  class_selector.py  session_selector.py  subject_selector.py
backend/academics/services/: assessment_service.py  assignment_service.py  class_service.py  grading_service.py  session_service.py  (+1 more)
backend/config/: asgi.py  urls.py  wsgi.py
backend/core/: backends.py  models.py  models_audit.py  permissions.py
backend/core_services/: cache_utils.py  models.py  serializers.py  serializers_marks.py  signals.py  urls.py
backend/enrollments/: apps.py  models.py
backend/identity/: apps.py  models.py
backend/payments_management/: admin.py  models.py  serializers.py  urls.py
backend/result_management/: apps.py
backend/results/: apps.py  models.py
backend/school_management_system/: settings.py
backend/shared/: base_model.py  base_repository.py  base_selector.py  base_service.py  exceptions.py  middleware.py  pagination.py  permissions.py  types.py
backend/student/: apps.py
backend/tasks/: celery_app.py  ranking_tasks.py  report_tasks.py
(+339 files in other folders)
