[project]
name = "rms-backend"
version = "1.0.0"
description = "Result Management System - Backend"
requires-python = ">=3.14"
dependencies = [
    "Django>=6.0",
    "djangorestframework>=3.14.0",
    "djangorestframework-simplejwt>=5.3.0",
    "django-cors-headers>=4.3.0",
    "django-filter>=23.5",
    "drf-spectacular>=0.28.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "argon2-cffi>=23.1.0",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    "structlog>=24.0.0",
    "Pillow>=12.0.0",
    "openpyxl>=3.1.0",
    "django-prometheus>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "django-stubs>=5.0.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["config", "shared", "core", "identity", "academics", "enrollments", "results", "reporting", "tasks"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = ["tests.py", "test_*.py"]
addopts = "--tb=short --strict-markers -v"
